Header and Showcase

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
             <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
             <button class="menu-bars"><i class="fa-solid fa-bars-staggered"></i></button>
             <div class="menu">
-                <div class="top-memu">
+                <div class="top-menu">
                     <div class="contact-information">
-                        <div class="contant-box">
+                        <div class="content-box">
                             <i class="fa-solid fa-phone"></i>
                             +46 (8) 121 470 50
                         </div>
-                        <div>
+                        <div class="content-box">
                             <i class="fa-regular fa-envelope"></i>
                             info@crito.com
                         </div>
-                        <div content-box last>
+                        <div class="content-box-last" >
                             <i class="fa-solid fa-location-dot"></i>
                             Sveavägen 31, 111 34 STOCKHOLM
                         </div>
                     </div>
                     <div class="social-media">
-                        <a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i>
-                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i>
-                        <a href="https://instgram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>
-                        <a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i>
+                        <a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://instgram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#"></a>
                     </div>
                 </div>
@@ -56,12 +56,12 @@
     <!--  showcase section -->
     <section class="showcase">
         <div class="container">
-            <div class="contant"></div>
+            <div class="contact">
             <h1>We Provide The Best Business Solutions</h1>
             <p>Establish your vision and value proposition and turn them into testable prototypes.</p>
-            <a class="btn-yellow" href="konsolting.html">Get Consulting<i class="fa-regular fa-arrow-up-right"></i></a>
-            <a class="btn-transparent" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i></a>
-
+            <a class="btn-yellow" href="konsolting.html">Get Consulting<i class="fa-solid fa-square-arrow-up-right"></i></a>
+            <a class="btn-transparent" href="services.html">Learn More<i class="fa-solid fa-square-arrow-up-right"></i></a>
+        </div>
             <img src="images/showcase image.svg" alt="image of a smart man">
 
         </div>
